tests/ok/generic-enum-constants.ari
const ZERO: Option[i32] = None;
const ONE: Option[i32] = Some(1i32);
const TWO: Option[i32] = Some<i32>(2i32);

mod Store {
  pub enum Slot[T] {
    Empty,
    Full(T),
  }

  pub const EMPTY: Slot[i32] = Empty;
  pub const FULL: Slot[i32] = Full(4i32);

  pub fn score(value: Slot[i32]) -> i64 {
    return match value {
      Full(inner) => inner as i64,
      Empty => 0,
    };
  }
}

fn score(value: Option[i32]) -> i64 {
  return match value {
    Some(inner) => inner as i64,
    None => 0,
  };
}

fn main() -> i64 {
  return score(ZERO) + score(ONE) + score(TWO) + Store::score(Store::EMPTY) + Store::score(Store::FULL);
}
