tests/errors/attribute-repr-enum-payload.ari
@repr(C)
enum Maybe[T] {
  None,
  Some(T),
}

fn main() -> i64 {
  return 0;
}
